--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "add": "^2.0.6",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-axios-cors": "^1.0.1",
